config-root/namespaces/jx-staging/jx-py-test4/jx-py-test4-jx-py-test4-deploy.yaml
# Source: jx-py-test4/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jx-py-test4-jx-py-test4
  labels:
    draft: draft-app
    chart: "jx-py-test4-0.0.2"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-staging
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: jx-py-test4-jx-py-test4
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: jx-py-test4-jx-py-test4
    spec:
      serviceAccountName: jx-py-test4-jx-py-test4
      containers:
        - name: jx-py-test4
          image: "10.107.229.210/hlechuga/jx-py-test4:0.0.2"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
        - name: "tekton-container-registry-auth"
