config-root/namespaces/jx-staging/jx-py-test4/jx-py-test4-svc.yaml
# Source: jx-py-test4/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jx-py-test4
  labels:
    chart: "jx-py-test4-0.0.2"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    fabric8.io/expose: "true"
    fabric8.io/ingress.annotations: 'kubernetes.io/ingress.class: nginx'
  namespace: jx-staging
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: jx-py-test4-jx-py-test4
