config-root/namespaces/jx-staging/jx-py-test4/jx-py-test4-ingress.yaml
# Source: jx-py-test4/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: jx-py-test4
  namespace: jx-staging
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: jx-py-test4
              servicePort: 80
      host: jx-py-test4-jx-staging.192.168.64.7.nip.io
